examples/test/testpolicy1613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1613
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key27: value15
      key28: value32
      key47: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value19
          key33: value18
          key47: value39
      podSelector:
        matchLabels:
          key48: value29
